--- a/TimeTravel.API/TimeTravel.API.csproj
+++ b/TimeTravel.API/TimeTravel.API.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="NLog.Extensions.Logging" Version="1.0.0-rtm-rc5" />
   </ItemGroup>
 
 </Project>
