Resolved SendGrid authentication issue

--- a/TimeTravel.API/appSettings.json
+++ b/TimeTravel.API/appSettings.json
@@ -1,6 +1,8 @@
 ﻿{
   "mailSettings": {
-    "mailToAddress": "XXX",
-    "mailFromAddress": "XXX"
+    "mailToAddress": "daruchi007@gmail.com",
+    "mailFromAddress": "support@timetravel-api.azurewebsites.net",
+    "azure-username": "azure_85e6db2715d76e7e10732ed98de7d825@azure.com",
+    "azure-password": "Mongo#1990"
   }
 }
